# GIVC

./: .env.example  .env.rejection.template  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .htmlhintrc  .stylelintrc.json  AGENTS.md  ALL_IMPROVEMENTS_COMPLETION_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.txt  AUDIT_AND_ENHANCEMENTS_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  BUILD_PLAN.md  BUILD_VERIFICATION_REPORT.md  BatchStatementReview.aspx  CI_CD_FIX_REPORT.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_ENHANCEMENTS_SUMMARY.md  CLEANUP_RECOMMENDATIONS.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_PAGES_ENHANCEMENT.md  CLOUDFLARE_PYTHON_SDK_CLARIFICATION.md  COMMIT_GUIDE.md  COMPREHENSIVE_AUDIT_2025.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPRECATED_PACKAGES_UPGRADE.md  DIRECTORY_INDEX.md  DIRECTORY_STRUCTURE.md  DOCKER_VPS_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.api  (+131 more)
.github/: dependabot.yml
GIVC/: .gitignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile.dev  GIT_UPDATE_GUIDE.md  SessionMsg.js  git-update.bat  package-lock.json  package.json  push-to-remote.bat  pytest.ini  requirements_core.txt  tag_assistant_api_bin.js  tsconfig.node.json  validator.js  vitest.config.ts  wrangler.toml
analysis_data/: Accounts.xlsx  DEEP_ORGANIZATIONAL_INSIGHTS.json  MOH NPHIES.xlsx  MOH UPDATE..xlsx  RCM_ANALYSIS_INSIGHTS.json  Worksheet Resubmission..xlsx
api/: main.py
auth/: auth_manager.py  cert_manager.py
brainsait-agentic-workflow/: README.md  deploy.sh  docker-compose.yml
brainsait-nphies-givc/: README.md  requirements.txt
brainsait-platform/: .env.example  AUDIT_REPORT.md  BUILD_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS_OCT27.md  FINAL_SUMMARY.md  INTEGRATION.md  QUICK_START_CARD.md  README.md  docker-compose.unified.yml  quick-start.sh  start-brainsait.sh  test-integration.sh
brainsait-rcm/: package-lock.json
config/: new updated price list.lnk  payer_config.py  platform_config.py  rejection_codes.py  settings.py
data/: Accounts.xlsx  claims_sample.json  daily-follow-ups.xlsx  members_sample.csv
database/: init.sql
deployment/: docker-compose.yml  requirements-secure-v2.txt  requirements-secure.txt  requirements.txt
docker/: default.conf
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  GETTING_STARTED.md  REJECTION_INTEGRATION_GUIDE.md  api-guide.md  nphies_integration_recommendations.md
examples/: platform_integration_demo.py  usage_examples.py
frontend/: index.html
middleware/: security_middleware.py
models/: bundle_builder.py
monitoring/: alert_system.py  (+3 more)
(+584 files in other folders)
